feat: baixa de estoque que cria um stock move
